# flask-microservice

./: .replit  app.py  model1.pkl  pyproject.toml
